# BehaviorTreeMonitor

./: .gitignore  LICENSE  README.md  bt_monitor.spec  main.py  pyproject.toml
.github/workflows/: build.yml
bt_monitor/: app.py  protocol.py  server.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: BehaviorNode.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/stores/: treeStore.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
