[project]
name = "behavior-tree-monitor"
version = "1.0.0"
description = "BehaviorTree.CPP Groot2 实时监控工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "pyzmq>=25.0.0",
    "PySide6>=6.6.0",
    "PySide6-Addons>=6.6.0",
]

[project.scripts]
bt-monitor = "bt_monitor.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bt_monitor"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
